--- a/privacy.html
+++ b/privacy.html
@@ -66,10 +66,11 @@
         <h1>Privacy Policy</h1>
         <p><strong>Effective Date:</strong> February 13, 2026</p>
 
-        <p>Sarang Naik ("we," "us," or "our") operates the <strong>Clear Ahead</strong> mobile application (App ID:
-            <code>com.sarangnaik26.clearahead</code>) and the associated web version. This page informs you of our
+        <p>Fairy Prisme ("we," "us," or "our") operates the <strong>Clear Ahead</strong> mobile application (App ID:
+            <code>com.fairyprisme.clearahead</code>) and the associated web version. This page informs you of our
             policies regarding the collection, use, and disclosure of personal data when you use our Service and the
-            choices you have associated with that data.</p>
+            choices you have associated with that data.
+        </p>
 
         <h2>1. Information Collection and Use</h2>
         <p>We do NOT collect any personally identifiable information (PII) from our users. <strong>Clear Ahead</strong>
@@ -92,7 +93,8 @@
         <h2>4. Data Storage</h2>
         <p>All game-related data, including high scores, total coins, and unlocked items, are stored
             <strong>locally</strong> on your device using your browser's local storage or the device's secure storage.
-            This data remains on your device and is not synchronized with any central database managed by us.</p>
+            This data remains on your device and is not synchronized with any central database managed by us.
+        </p>
 
         <h2>5. Third-Party Services</h2>
         <p>The Service may include links to third-party services (such as Google Play Services) that may collect
@@ -116,7 +118,7 @@
             platform through which you downloaded the app.</p>
 
         <div class="footer">
-            &copy; 2026 Sarang Naik. All rights reserved.
+            &copy; 2026 Fairy Prisme. All rights reserved.
         </div>
     </div>
 </body>
