--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -8,6 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" type="image/png" href="/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     body {
@@ -19,19 +20,22 @@
       user-select: none;
       -webkit-tap-highlight-color: transparent;
     }
+
     canvas {
       display: block;
       image-rendering: pixelated;
     }
+
     .pixel-font {
       font-family: 'Press Start 2P', cursive;
     }
+
     #root {
       width: 100vw;
       height: 100vh;
     }
   </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
@@ -42,11 +46,13 @@
   }
 }
 </script>
-<script type="module" src="./index.tsx"></script>
-<link rel="stylesheet" href="/index.css">
+  <script type="module" src="./index.tsx"></script>
+  <link rel="stylesheet" href="/index.css">
 </head>
+
 <body>
   <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
